Adding fixes to make the config seamless
